fix: fix z-index of header

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,6 +8,7 @@
   justify-content: space-between;
   padding: 1.5rem;
   background-color: $primary-dark;
+  z-index: 10;
 
   &__logo {
     display: flex;
